fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC24PrintedCampaignRule.dsl
test 1 掲載データ-キャンペーンが投入する場合:
   2019/01/23 21:02:00:
       AC24PrintedCampaignEvent:
           media: "YSS"                          # 対象媒体
           accountId: 2400001                    # アカウントID
           campaignId: 24002                     # キャンペーンID
           campaignName: "キャンペーン名"        # キャンペーン名
           reportDate: "2019/01/29"              # レポート取得日
test 2 掲載データ-キャンペーンが複数件投入する場合:
   2019/01/23 21:02:00:
       AC24PrintedCampaignEvent:
           media: "YSS"                          # 対象媒体
           accountId: 2400001                    # アカウントID
           campaignId: 24003                     # キャンペーンID
           campaignName: "キャンペーン名"        # キャンペーン名
           reportDate: "2019/01/29"              # レポート取得日
   2019/01/23 21:03:00:
       AC24PrintedCampaignEvent:
           media: "YSS"                          # 対象媒体
           accountId: 2400001                    # アカウントID
           campaignId: 24004                     # キャンペーンID
           campaignName: "キャンペーン名"        # キャンペーン名
           reportDate: "2019/01/29"              # レポート取得日